create user working

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -55,8 +55,8 @@
                                             </div>
            
                                             <div class="modal-body">
-                                                <input id="name" type="text" placeholder="Insert username" ng-model="ctrl.user.name">
-                                                <input id="password" type="text" placeholder="Insert password" ng-model="ctrl.user.password">
+                                                <input id="name" type="text" placeholder="Insert username" ng-model="ctrl.user.userName">
+                                                <input id="password" type="text" placeholder="Insert password" ng-model="ctrl.user.passwordHash">
 
                                             </div>
                                             <div class="modal-footer">
