--- a/src/main/webapp/app/view3/view3.html
+++ b/src/main/webapp/app/view3/view3.html
@@ -1,22 +1,29 @@
 <h3>This is the partial for view 3.</h3>
 <div>
-    <p>Data from server (Admins only) <b style="color: darkblue">{{data.message}}</b></p>
-    <p>Server Time: <b style="color: darkblue">{{data.serverTime}}</b></p>
+    <div>
+        <p>Data from server (Admins only) <b style="color: darkblue">{{data.message}}</b></p>
+        <p>Server Time: <b style="color: darkblue">{data.serverTime}}</b></p>
 
-<form>
-    Søgetekst <input type="text" style="width:8em;" placeholder="Påkrævet"><br>
-    Søgemulighed<select>
-        <option value="Almindelig">Almindelig</option>
-        <option value="CVR">CVR</option>
-        <option value="Navn">Navn</option>
-        <option value="Produktionsenhed">Produktionsenhed</option>
-        <option value="Telefonnummer">Telefonnummer</option>
-    </select><br>
-    Land<select>
-        <option value="DK">DK</option>
-        <option value="NO">NO</option>
-    </select>
-</form><br>
+        <form ng-controller="myCtrl as ctrl" ng-submit="ctrl.getData()" align="right">
+            Søgetekst <input type="text" style="width:8em;" placeholder="Påkrævet" ng-model="ctrl.search"><br>
+            Søgemulighed<select>
+                <option value="Almindelig">Almindelig</option>
+                <option value="CVR">CVR</option>
+                <option value="Navn">Navn</option>
+                <option value="Produktionsenhed">Produktionsenhed</option>
+                <option value="Telefonnummer">Telefonnummer</option>
+            </select><br>
+            Land<select>
+                <option value="DK">DK</option>
+                <option value="NO">NO</option>
+            </select>
+            <button onclick="ctrl.getData()" class="btn btn-success">Slå op</button>
+            {{ctrl.data}}
+        </form>
 
-<button onclick="getData()"class="btn btn-success">Slå op</button>
+   <!--     <form ng-controller="myCtrl as ctrl" ng-submit="ctrl.getData()" align="right">
+            <button onclick="ctrl.getData()" class="btn btn-success">Slå op</button>
+            {{ctrl.data}}
+        </form> -->
+    </div>
 </div>
