--- a/src/main/webapp/app/view3/view3.html
+++ b/src/main/webapp/app/view3/view3.html
@@ -1,10 +1,10 @@
+<html>
 <h3>This is the partial for view 3.</h3>
-<div>
+
     <p>Data from server (Admins only) <b style="color: darkblue">{{data.message}}</b></p>
     <p>Server Time: <b style="color: darkblue">{{data.serverTime}}</b></p>
-
 <form>
-    Søgetekst <input type="text" style="width:8em;" placeholder="Påkrævet"><br>
+    Søgetekst <input type="text" style="width:10em;" placeholder="Påkrævet"><br>
     Søgemulighed<select>
         <option value="Almindelig">Almindelig</option>
         <option value="CVR">CVR</option>
@@ -19,4 +19,4 @@
 </form><br>
 
 <button onclick="getData()"class="btn btn-success">Slå op</button>
-</div>
+</html>
