Man kan se resultatet på siden

--- a/src/main/webapp/app/view3/view3.html
+++ b/src/main/webapp/app/view3/view3.html
@@ -57,6 +57,7 @@
                 </select>
                 <input type="text" style="width:8em;" placeholder="amount" ng-model="ctrl.amount">
                 <button class="btn btn-success">calculate</button>
+                {{ctrl.derudaf}}
             </form>
             <!--<tr><td>{{ctrl.data.vat}}<td></tr>
             {{ctrl.data.name}}
