--- a/src/main/webapp/app/view3/view3.html
+++ b/src/main/webapp/app/view3/view3.html
@@ -2,7 +2,7 @@
 <div>
     <div>
         <p>Data from server (Admins only) <b style="color: darkblue">{{data.message}}</b></p>
-        <p>Server Time: <b style="color: darkblue">{data.serverTime}}</b></p>
+        <p>Server Time: <b style="color: darkblue">{{data.serverTime}}</b></p>
 
         <div ng-controller="myCtrl as ctrl">
             Søgetekst <input type="text" style="width:8em;" placeholder="Påkrævet" ng-model="ctrl.search"><br>
