--- a/src/main/webapp/app/view2/view2.html
+++ b/src/main/webapp/app/view2/view2.html
@@ -1,4 +1,16 @@
-<p>This is the partial for view 2.</p>
+<h1>Dokumentation</h1>
 <div>
-  <p>Data from server (Users ONLY) <b style="color: darkblue">{{data}}</b></p>
+    <h3>Information</h3>
+    <div>
+    <p> Hold: Dat B </p>
+       <p>Gruppemedlemmer: </p>
+       <p>- Ørvur Guttesen </p>
+       <p>- Oliver Villumsen </p>
+       <p>- Tim Hemmingsen </p>
+       <p>- Michael Daugbjerg </p>
+    </div>
+    <h3>Git</h3>
+  <p>
+      Link til git: https://github.com/Skiparin/ca3
+  </p>
 </div>
